# SmartGridready.github.io

./: .gitignore  README.md  index.html  make.bat  pyproject.toml  requirements.txt
docs/: .buildinfo  api.html  genindex.html  home.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: api.rst.txt  home.rst.txt  index.rst.txt
docs/_sources/content/: code-samples.rst.txt  commhandler-libraries.rst.txt  contacts.rst.txt  device-driver-libraries.rst.txt  functional-profiles.rst.txt  getting-involved.rst.txt  glossary.rst.txt  intermediary.rst.txt  introduction.rst.txt  openapi-specifications.rst.txt  overview.rst.txt  product-description-eid.rst.txt  product-description-file.rst.txt  sgr-certification.rst.txt  (+1 more)
docs/_static/: custom.css  custom.js
docs/content/: code-samples.html  commhandler-libraries.html  communicator-description-file.html  contacts.html  device-driver-libraries.html  functional-profiles.html  getting-involved.html  glossary.html  intermediary.html  introduction.html  openapi-specifications.html  overview.html  product-description-eid.html  product-description-file.html  sgr-certification.html  sgr-declaration.html
source/: conf.py  home.rst  index.rst
source/_static/: custom.css  custom.js
source/content/: commhandler-libraries.rst  communicator-description-file.rst  contacts.rst  device-driver-libraries.rst  functional-profiles.rst  getting-involved.rst  glossary.rst  intermediary.rst  introduction.rst  openapi-specifications.rst  product-description-file.rst  sgr-certification.rst  sgr-declaration.rst
(+39 files in other folders)
