[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "SmartGridready"
authors = [
  {name = "Hans Furrer", email = "hfurrer@ergonomics.ch"},
  {name = "Kevin Arm", email = "kevin.arm@zuehlke.com"},
  {name = "Matthias Krebs", email = "matthias.krebs@fhnw.ch"},
]
dynamic = ["version", "description"]
